--- a/style.css
+++ b/style.css
@@ -278,5 +278,159 @@ body{
   
   /* section--2 */
 
+  /* section--3 */
+.section--3 {
+    padding: 3% 10%;
+  }
+  
+  .crew-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
+  }
+  
+  .slider-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px 0;
+  }
+  
+  .slider {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  .slide {
+    display: none;
+  }
+  
+  .sub {
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: clamp(1rem, 2vw + 1rem, 2rem);
+    color: gray;
+  }
+  
+  .little-sub {
+    font-size: clamp(1rem, 2vw + 1.5rem, 3rem);
+    font-weight: 400;
+    color: white;
+    text-transform: uppercase;
+    margin: 20px 0;
+  }
+  
+  .dots {
+    margin-top: 30px;
+  }
+  
+  .dots__dot {
+    background-color: #b9b9b9;
+    opacity: 0.7;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+    cursor: pointer;
+    transition: all 0.5s;
+  }
+  
+  .dots__dot:last-child {
+    margin: 0;
+  }
+  
+  .dots__dot--active {
+    background-color: whitesmoke;
+    opacity: 1;
+  }
+  
+  .slider--img {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  
+  .slider--img {
+    align-items: flex-end;
+  }
+  
+  .slider--img img {
+    margin: 7% 0;
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .slide:first-child {
+    display: block;
+  }
+  
+  /* section--3 */
+  
+  /* section--4 */
+  .section--4 {
+    padding: 2% 0% 2% 10%;
+  }
+  
+  .technology-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .tech-img {
+    padding: 10% 0;
+    width: auto;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .tech-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .tech-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: clamp(1rem, 2vw + 1rem, 3rem);
+  }
+  
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    gap: clamp(1rem, 2vw + 1rem, 4rem);
+  }
+  
+  .btn {
+    font-size: large;
+    width: var(--size);
+    height: var(--size);
+    border-radius: 50%;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .btn--active {
+    background-color: white;
+    color: black;
+  }
+  
+  .tech {
+    display: none;
+  }
+  
+  .tech:first-child {
+    display: block;
+  }
+  
+  /* section--4 */
+  
   
 
